--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
+    "generate": "nuxt generate",
     "start": "node .output/server/index.mjs"
   },
   "dependencies": {
